--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
 .App {
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+::-webkit-scrollbar {
+  display: block;
+  width:  10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Track */
+::-webkit-scrollbar-track {
+  background: #ffffff;
+  
+  
+}
+a {
+  text-decoration: none;
+  
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #A5A6FF;
+  border-radius: 15px;
+  border: 2px white solid;
+  background-clip: padding-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
