arranged small differences

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -134,6 +134,7 @@
     font-weight: 500;
 }
 
+
 .mail:after {
     content: '';
     position: absolute;
@@ -158,7 +159,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding-left: 50px;
-
+    margin-bottom: 20px;
     width: 75%;
 }
 
