--- a/src/styles/Portfolio.css
+++ b/src/styles/Portfolio.css
@@ -8,8 +8,9 @@
 
 .portfolio_inner {
     margin: 0px auto;
-    padding-top: 85px;
+    padding:  85px 0;
     max-width: 1000px;
+    
 }
 
 .portfolio-author-message {
