--- a/src/styles/Services.css
+++ b/src/styles/Services.css
@@ -9,9 +9,10 @@
 
 .services_inner {
 
-    padding-top: 85px;
+    padding: 85px 0;
     max-width: 1000px;
     margin: 0px auto;
+    
 }
 
 .services-author-message {
